--- a/Exercícios/Módulo 3/exs023(tabelas)/tabela003.html
+++ b/Exercícios/Módulo 3/exs023(tabelas)/tabela003.html
@@ -18,11 +18,14 @@
         header {
             background-color: rgb(184, 33, 0);
             color: #d6d6d6;
-            height: 100px;
+            height: 110px;
+            position: fixed;
+            width: 100%;
+
         }
         header > h1 {
             padding: 15px 20px;
-            padding-bottom: 30px;
+            padding-bottom: 40px;
             font-size: 1.2em;
         }
         h1 > a {
@@ -46,7 +49,7 @@
             max-width: 800px;
             height: 100%;
             margin: auto;
-            margin-top: 5px;
+            padding-top: 110px;
         }
         main > h1 {
             padding-top: 15px;
