--- a/Exercícios/Módulo 3/exs023(tabelas)/tabela004.html
+++ b/Exercícios/Módulo 3/exs023(tabelas)/tabela004.html
@@ -5,19 +5,31 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title></title>
     <style>
-        body {
-
-        }
         table {
             border-collapse: collapse;
             width: 500px;
+            position: relative; /*configuração de cabeçalho fixo*/
         }
-        thead, tfoot {
-            background-color: rgba(49, 49, 49, 0.37);
-        
+        thead{        /*configuração de cabeçalho fixo*/
+            position: sticky;
+            top: -1px;
+            background-color: rgb(0, 0, 0);
+            color: white;
+        }
+        caption {
+            background-color: gray;
+            padding: 10px;
+            font-size: 1.5em;
+            font-weight: bold; /*negrito*/
+        }
+        tbody > tr:nth-child(2n) {  /*No lugar de (2n), pode se usar duas configurações: (odd) para linhas impar E/OU (even) para as linhas pares. Assim escolher a cor das listras separadamente*/
+            background-color: lightgray; /*efeito zebrado*/
+        }
+        tfoot {
+            background-color: rgba(0, 0, 0, 0.5);
         }
         th, td {
-            border: solid 1px gray;
+            border: solid 1px rgb(92, 59, 59);
             padding: 10px;
         }
         td.pos {
@@ -33,18 +45,23 @@
     <!--
         Anatomia para tabelas grandes:
         Table
+            Capition = legenda da tabela
             Thead
                 TR, TD, TH
             Tbody
                 TR, TD, TH
             Tfoot
                 TR, TD, TH
+
+                th = título 
+                td = dados do título
     -->
     <header>
 
     </header>
     <main>
         <table>
+            <caption>População das Unidades Federativas</caption>
             <thead>
                 <tr>
                     <th>Posição</th>
