--- a/Exercícios/Módulo 3/ex023( tabelas)/tabela003.html
+++ b/Exercícios/Módulo 3/ex023( tabelas)/tabela003.html
@@ -32,7 +32,7 @@
             padding-right: 5px;
         }
         nav {
-            text-align: center;
+            width: 800px;
         }
         nav > a {
             color: white;
@@ -58,7 +58,8 @@
             color: rgb(179, 176, 176);
         }
         table {
-            min-width: 480px; 
+            
+            width: 600px; 
             border-collapse: collapse;
         }
         .esquerda {
