Aulas de Iframes

--- a/Exercícios/Módulo 3/ex023(tabelas reais)/tabela3.html
+++ b/Exercícios/Módulo 3/ex023(tabelas reais)/tabela3.html
@@ -20,7 +20,7 @@
         tbody > tr:nth-child(2n) {
             background-color: rgba(122, 122, 122, 0.363);
         }
-        #container {
+        #container { /*envelopa em uma div container e coloca um overflow*/
             overflow-x: auto;
         }
     </style>
